--- a/challenge/module1-lecture5/index.html
+++ b/challenge/module1-lecture5/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b94f5696ce.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="style.css">
     <title>Youtube - Web Prep</title>
   </head>
   <body>
