--- a/challenge/module1-lecture5/index.html
+++ b/challenge/module1-lecture5/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="main">
-      <div class="sidebar">
+        <div class="sidebar">
         <div class="short">
             <a href="#">
                 <i class="fa-solid fa-house"></i>
@@ -121,7 +121,26 @@
             <small><i class="fa-solid fa-copyright"></i> 2023 Google LLC </small>
         </div>
         </div>
-        <div class="content">
+        <div class="home">
+          <div class="category">
+          <button class="category-btn rounded-pill active">All</button>
+          <button class="category-btn rounded-pill">Live</button>
+          <button class="category-btn rounded-pill">Gaming</button>
+          <button class="category-btn rounded-pill">Music</button>
+          <button class="category-btn rounded-pill">JavaScript</button>
+          <button class="category-btn rounded-pill">Web Development</button>
+          <button class="category-btn rounded-pill">Soccer</button>
+          <button class="category-btn rounded-pill">Computer Programming</button>
+          <button class="category-btn rounded-pill">CSS</button>
+          <button class="category-btn rounded-pill">Artificial Intelligence</button>
+          <button class="category-btn rounded-pill">Chess</button>
+          <button class="category-btn rounded-pill">Stocks</button>
+          <button class="category-btn rounded-pill">Gadgets</button>
+          <button class="category-btn rounded-pill">Recently Upload</button>
+          <button class="category-btn rounded-pill">Watched</button>
+          <button class="category-btn rounded-pill">New to you</button>
+          </div>
+          <div class="content">
           <div class="content-item">
             <img src="./assets/epicode_thumb.png" class="content-thumbnail" alt="thumbnail" />
             <div class="content-info">
@@ -182,16 +201,8 @@
               </div>
             </div>
           </div>
-        </div>
+          </div>
+      </div>
     </div>
-      
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
