--- a/challenge/module1-lecture5/index.html
+++ b/challenge/module1-lecture5/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b94f5696ce.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="./assets/youtube.ico" />
     <link rel="stylesheet" href="style.css">
     <title>Youtube - Web Prep</title>
   </head>
