--- a/challenge/module1-lecture5/index.html
+++ b/challenge/module1-lecture5/index.html
@@ -18,12 +18,12 @@
     <div class="flex-div nav">
       <div class="nav-left flex-div">
           <i class="fa-solid fa-bars menu" id="menu"></i>
-          <img src="./assets/logo.png" class="logo" alt="Youtube Logo">
+          <a href="https://www.youtube.com/"><img src="./assets/logo.png" class="logo" alt="Youtube Logo"></a>
       </div>
       <div class="nav-middle flex-div">
           <div class="search flex-div">
               <input type="text" placeholder="Search" id="">
-              <i class="fa-solid fa-magnifying-glass"></i>
+              <i class="fa-solid fa-magnifying-glass search-glass"></i>
           </div>
           <i class="fa-solid fa-microphone mic"></i>
       </div>
@@ -31,7 +31,7 @@
           <i class="fa-solid fa-braille"></i>
           <i class="fa-solid fa-bell"></i>
           <i class="fa-solid fa-video-slash"></i>
-          <img src="./assets/user.jpeg" class="user" alt="User's Image">
+          <a href="https://accounts.google.com/v3/signin/confirmidentifier?continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Faction_handle_signin%3Dtrue%26app%3Ddesktop%26hl%3Dit%26next%3Dhttps%253A%252F%252Fwww.youtube.com%252F&ec=65620&hl=it&ifkv=AXo7B7W5C4LW08Cho30RemilO728lU5zGwYSayiAn-CNQHAS7qAHoAMrXaTDjORivKeZ3cBsfUz0&passive=true&service=youtube&uilel=3&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1375432220%3A1692179773023234"><img src="./assets/user.jpeg" class="user" alt="User's Image"></a>
       </div>
     </div>
     <div class="main">
@@ -124,22 +124,20 @@
         </div>
         <div class="home">
           <div class="category">
-          <button class="category-btn rounded-pill active">All</button>
-          <button class="category-btn rounded-pill">Live</button>
-          <button class="category-btn rounded-pill">Gaming</button>
-          <button class="category-btn rounded-pill">Music</button>
-          <button class="category-btn rounded-pill">JavaScript</button>
-          <button class="category-btn rounded-pill">Web Development</button>
-          <button class="category-btn rounded-pill">Soccer</button>
-          <button class="category-btn rounded-pill">Computer Programming</button>
-          <button class="category-btn rounded-pill">CSS</button>
-          <button class="category-btn rounded-pill">Artificial Intelligence</button>
-          <button class="category-btn rounded-pill">Chess</button>
-          <button class="category-btn rounded-pill">Stocks</button>
-          <button class="category-btn rounded-pill">Gadgets</button>
-          <button class="category-btn rounded-pill">Recently Upload</button>
-          <button class="category-btn rounded-pill">Watched</button>
-          <button class="category-btn rounded-pill">New to you</button>
+          <button class="category-btn active">Tutti</button>
+          <button class="category-btn">Dal vivo</button>
+          <button class="category-btn">Mix</button>
+          <button class="category-btn">Musica</button>
+          <button class="category-btn">Giochi</button>
+          <button class="category-btn">Web Development</button>
+          <button class="category-btn">Javascript</button>
+          <button class="category-btn">Programmazione</button>
+          <button class="category-btn">CSS</button>
+          <button class="category-btn">Intelligenza artificiale</button>
+          <button class="category-btn">Scacchi</button>
+          <button class="category-btn">Borsa</button>
+          <button class="category-btn">Guardati</button>
+          <button class="category-btn">Novitá per te</button>
           </div>
           <div class="content">
           <div class="content-item">
@@ -203,6 +201,7 @@
             </div>
           </div>
           </div>
+          <hr />
       </div>
     </div>
   </body>
